// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextWithIconItem /> should render 1`] = `
<div
  className="mfui-text-with-icon-item mfui-text-with-icon-item_centering-on-mobile test-class"
>
  <div
    className="mfui-text-with-icon-item__svg-icon"
  >
    <test-file-stub
      style={
        Object {
          "fill": "#00B956",
        }
      }
    />
  </div>
  <div
    className="mfui-text-with-icon-item__text"
  >
    First item
  </div>
</div>
`;

exports[`<TextWithIconItem /> should render with HTML and classes 1`] = `
<div
  className="mfui-text-with-icon-item mfui-text-with-icon-item_centering-on-mobile test-class"
>
  <div
    className="mfui-text-with-icon-item__svg-icon icon-class"
  >
    <test-file-stub
      style={
        Object {
          "fill": "#00B956",
        }
      }
    />
  </div>
  <div
    className="mfui-text-with-icon-item__text text-class"
  >
    First item 
    <component
      key="1"
    >
      with strong text
    </component>
  </div>
</div>
`;
